<resources>
    <string name="app_name">Food Delivery</string>
    <string name="order_food">Order food</string>
    <string name="next">NEXT</string>
    <string name="get_started">GET STARTED</string>
    <string name="first_onboarding">Decide where you want to eat and add to cart</string>
    <string name="second_onboarding">Confirm your order, pay online, or at the door.</string>
    <string name="third_onboarding">Have your order delivered to your home. Enjoy your meal.</string>
    <string name="haveAccount">Do you already have an account? Log in</string>
    <string name="sign_up">Sign up</string>
    <string name="password">Password</string>
    <string name="e_mail">E-mail</string>
    <string name="full_name">Full Name</string>
    <string name="fill_in_your_details_to_begin">Fill in your details to begin</string>
    <string name="let_s_start_here">Let\'s Start Here</string>
    <string name="don_t_have_an_account">Don\'t have an account? Sign up</string>
    <string name="login">Login</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="profile">Profile</string>
    <string name="restaurant_list">Restaurant List</string>
    <string name="favourite">Favourite</string>
    <string name="location">Restaurants For Your Location</string>
    <string name="restaurant_detail">Restaurant Detail</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="last_orders">Last Orders</string>
    <string name="favorites">Favorites</string>
    <string name="logout">Logout</string>
    <string name="meal_detail_image">meal detail image</string>
    <string name="order">Order</string>
    <string name="profile_image">Profile Image</string>
    <string name="arrow_button">Arrow Button</string>
    <string name="restaurant_image">Restaurant Image</string>
    <string name="menu">Restaurant Menu</string>
    <string name="meal_detail">Meal Detail</string>
    <string name="meal_ingredients">Meal Ingredients</string>
    <string name="user_profile">User Profile</string>
    <string name="settings">Settings</string>
    <string name="change_theme">Change Theme</string>
    <string name="rest">Your Favorite Restaurants </string>
    <string name="your_last_orders">Your Last Orders</string>
    <string name="you_do_not_have_a_delivery_yet">You do not have a delivery yet</string>
    <string name="you_don_t_have_any_favorites_yet">You don\'t have any favorites yet</string>
    <string name="no_data">noData</string>
    <string name="basket">basket</string>
    <string name="delete">delete</string>
</resources>